--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,7 @@
             "server": "localhost",
             "driver": "PostgreSQL",
             "name": "render.com",
-            "connectString": "postgresql://cse340fcq:upQmDpjaJhxMr6gpAbssaUNdPKAwEee3@dpg-crnp3868ii6s73eubgug-a.virginia-postgres.render.com/cse340fcq"
+            "connectString": "postgresql://server341fc:Y9qbZbdwf6XLh5faa61l7FJEEDocXlDk@dpg-crs8eud6l47c73ctj680-a.virginia-postgres.render.com/server341fc"
         }
     ]
 }
